Actions
Bug #10836
closedzcons: cast between incompatible function types
Start date:
2019-04-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/io/zcons.c:224:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)()) zc_rsrv, ^ ../../common/io/zcons.c:233:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)()) zc_wput, ^ ../../common/io/zcons.c:234:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)()) zc_wsrv, ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0e2db3e7fce28a3f9e1dfd13abce14eac44e98c6
commit 0e2db3e7fce28a3f9e1dfd13abce14eac44e98c6 Author: Toomas Soome <tsoome@me.com> Date: 2019-05-15T19:45:27.000Z 10836 zcons: cast between incompatible function types Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions